support capacitor runtime for teavm platform